[package]
name = "blur_encryptin_lib" # название вашей библиотеки
version = "0.1.0" # текущая версия библиотеки
authors = ["CleverWild"] # список авторов
edition = "2021" # используемое издание Rust (обычно 2018 или 2021)


[dependencies]
# serde = "1.0" # пример зависимости

# [dev-dependencies]
# tokio = "1.0" # пример зависимости для разработки (тесты, примеры и т.д.)

# [features]
# default = ["std"]
# std = [] # пример опциональной фичи